# Franka-LHT-Simulator

./: README.md  info.txt  keyboard_control.py
Objects/Rack/: Rack.urdf  hello_bullet.py
Objects/Syring/: Syring.urdf  hello_bullet.py
Objects/Tray/: Tray.urdf  hello_bullet.py
Objects/YcbMustardBottle/: model.urdf
Objects/banana/: banana.urdf  hello_bullet.py
Objects/bucket/: open_urdf_file.py
Objects/carrot/: carrot.urdf  hello_bullet.py
Objects/dominosugar/: dominosugar.urdf  hello_bullet.py
Objects/glass/: glass.urdf  hello_bullet.py
Objects/juice_bottle/: hello_bullet.py  juice_bottle.urdf
Objects/kelloges/: kelloges.urdf
Objects/open_cardboard box/: cardboard.urdf  hello_bullet.py
Objects/plastic_water_bottle/: CMakeLists.txt  package.xml
Objects/plastic_water_bottle/launch/: display.launch  gazebo.launch
Objects/plastic_water_bottle/meshes/: base_link.STL  link1.STL
Objects/plastic_water_bottle/urdf/: open_urdf_file.py  plastic_water_bottle.csv  plastic_water_bottle.urdf
Objects/strawberry/: hello_bullet.py  strawberry.urdf
Objects/sunscreen/: hello_bullet.py  sunscreen.urdf
Objects/syrup_bottle/: hello_bullet.py  syrup_bottle.urdf
Objects/wood_table/: CMakeLists.txt  package.xml
Objects/wooden_crate/: hello_bullet.py  wooden_crate.urdf
Trajectory/1.1.1/: data.csv  location.pkl
Trajectory/1.1.10/: data.csv  location.pkl
Trajectory/1.1.2/: data.csv  location.pkl
Trajectory/1.1.3/: data.csv  location.pkl
Trajectory/1.1.4/: data.csv  location.pkl
Trajectory/1.1.5/: data.csv  location.pkl
Trajectory/1.1.6/: data.csv  (+1 more)
(+392 files in other folders)
